# ddp-actuator-solver

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  results1.csv  results2.csv
cpp/: CMakeLists.txt
cpp/include/: CMakeLists.txt  awas.h  costDC.h  costRomeoPos.h  costRomeoTorque.h  costVIA.h  dcmotor.h  ilqrsolver.h  lqrsolver.h  maccepa.h  romeosimpleactuator.h  strainwaveactuator.h
cpp/src/: awas.cpp  costDc.cpp  costRomeoPos.cpp  costRomeoTorque.cpp  costVIA.cpp  dcmotor.cpp  maccepa.cpp  romeosimpleactuator.cpp  romeotorqueactuator.cpp  strainwaveactuator.cpp
cpp/test/: BenchCom.cpp  BenchCom.h  benchControl.cpp  benchControlMPC.cpp  benchTorqueControl.cpp  dccontrol.cpp  estimateBW.cpp  main.cpp  mainLQR.cpp  mainMPC.cpp  mainTorque.cpp  mainVIA.cpp  simulateBench.cpp  testAsserv.cpp  testModel.cpp
examples/: CMakeLists.txt
examples/inverse_pendulum/: CMakeLists.txt
examples/linear/: modelLinear.cpp
examples/pyrene_actuator/: CMakeLists.txt  PyreneActuator.cpp  PyreneActuator.hh  costFunction.cpp  mainBags.cpp  mainPyrene.cpp  pyreneActuator.cpp  pyreneActuator.hh  pyreneCostFunction.cpp  pyreneCostFunction.hh
examples/romeo_actuator/: CMakeLists.txt  costfunctionromeoactuator.hh
examples/temperature_control/: CMakeLists.txt  costtemp.cpp
include/ddp-actuator-solver/: costfunction.hh  ddpsolver.hh  dynamicmodel.hh
include/ddp-actuator-solver/inverse_pendulum/: costIP.hh  modelIP.hh
include/ddp-actuator-solver/linear/: costLinear.hh  modelLinear.hh
include/ddp-actuator-solver/pyrene_actuator/: pyreneActuator.hh  pyreneCostFunction.hh
include/ddp-actuator-solver/romeo_actuator/: costfunctionromeoactuator.hh  romeosimpleactuator.hh  romeotorqueactuator.hh
include/ddp-actuator-solver/temperature_control/: costtemp.hh  dctemp.hh
src/: CMakeLists.txt
src/inverse_pendulum/: costIP.cpp  mainIP.cpp  modelIP.cpp
src/linear/: CMakeLists.txt  costLinear.cpp  mainLinear.cpp  modelLinear.cpp
src/pyrene_actuator/: mainBags.cpp  mainPyrene.cpp  pyreneActuator.cpp  pyreneCostFunction.cpp
src/romeo_actuator/: CMakeLists.txt  benchControl.cpp  costfunctionromeoactuator.cpp  main.cpp  mainMPC.cpp  mainTorque.cpp  romeosimpleactuator.cpp  romeotorqueactuator.cpp  testModel.cpp
src/temperature_control/: costtemp.cpp  dctemp.cpp  mainTemp.cpp
tools/: extractData.py  posSimu.csv  trace.py  traceBench.py  traceBenchMPC.py  traceDC.py  traceEstimateBW.py  traceMPC.py  traceSimu.py  traceTest.py  traceTorque.py  traceVIA.py
