<package format="2">
  <name>ddp-actuator-solver</name>
  <version>1.2.2</version>
  <description>
    Dynamic Differential Programming
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <url>https://github.com/stack-of-tasks/ddp-actuator-solver</url>
  <author>Olivier Stasse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

</package>
